# Office-PowerPoint-MCP-Server

./: .gitignore  README.md  ppt_mcp_server.py  pyproject.toml  simple_test.py  test_mcp_tools.py
tools/: presentation_tools.py
utils/: s3_utils.py
